# Cnav

./: README.md  pyproject.toml
.github/workflows/: python-package.yml
cnav/: calendar.py  cip.py  constants.py  datetimetester.py  dt.py  dt2.py  dtmath.py  iersch5.py  rot3d.py  webdata.ini  webdata.py  xys.py
tests/: datetimetester.py  test_calendar.py  test_cip.py  test_dtmath.py  test_gregorian.py  test_numba.py
