[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "Cnav"
version = "0.0.0"
authors = [
  { name="Marcel Hesselberth", email="hessel@physics.leidenuniv.nl" },
]
description = "Celestial navigation, the modern way. (development package)"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Astronomy",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Mathematics"
]
keywords = ["astronomy", "astrometry", "physics", "mathematics", "celestial navigation"]
dependencies = [
  "numpy>1.21",
  "numba>0.56",
]
[project.urls]
Homepage = "https://github.com/hesselberth/Cnav"
Issues = "https://github.com/hesselberth/Cnav/issues"

[tool.hatch.build.targets.wheel]
packages = ["cnav"]
